build nodejs app from Jenkinsfile

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,11 +1,7 @@
-pipeline {
-  agent any
-
-  stages {
-    stage('Hello') {
-      steps {
-        echo 'Hello World'
-      }
+node {
+  stage('build') {
+    nodejs(nodeJSInstallationName: 'default') {
+      sh 'npm install'
     }
   }
 }
