add checkout scm stage

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,4 +1,7 @@
 node {
+  state('init') {
+    checkout scm
+  }
   stage('unit test') {
     nodejs(nodeJSInstallationName: 'default') {
       sh 'npm install --only=dev'
